# BZORP

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 95bca212d637_initial_models.py
backend/app/: main.py
backend/app/api/: auth.py  gmail.py
backend/app/core/: config.py  logger.py  security.py
backend/app/database/: session.py
backend/app/models/: __init__.py  digest_log.py  gmail_token.py  user.py
backend/app/scheduler/: __init__.py
backend/app/services/: ai.py  bot.py  gmail.py
frontend/src/: App.css  App.tsx  index.css
state/: progress.md  state.md
